<resources>
    <string name="app_name">ResumenPracticadeloexplicadoenlasclases</string>
    <string name="texto_vertical">Vertical</string>
    <string name="texto_horizontal">Horizontal</string>
    <string name="título_EjercicioLinearLayout">ExerciceAndroid2</string>
    <string name="esfera_de_dragón">dragon ball</string>
    <string name="Nombre">Name</string>
    <string name="Editar_perfil">Edit Profile</string>
    <string name="Seguidores">Followers</string>
    <string name="Siguiendo">Following</string>
    <string name="Estrellitas">Stars</string>
    <string name="Asunto">Affair</string>
    <string name="Contenido">Content</string>
    <string name="Fecha">Date</string>
    <string name="Estrellita">Star</string>
    <string name="loggin">Loggin</string>
    <string name="Contraseña">Password</string>
    <string name="añadir">Add</string>
    <string name="toast_text">toast_text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>