<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#673AB7">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/título_EjercicioLinearLayout"
            android:textSize="30sp"
            android:textColor="@color/white"
        />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:src="@drawable/esfera"
        android:contentDescription="@string/esfera_de_dragón"/>

    <LinearLayout
        android:id="@+id/secondLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Nombre"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#827C7C"
                android:layout_margin="5dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_no_border_background"
            android:text="@string/Editar_perfil"
            android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/thirdLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="10dp"
                >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Seguidores"
                            android:layout_weight="1"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Siguiendo"
                            android:layout_weight="1"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Estrellitas"
                            android:layout_weight="1"
                            android:gravity="center"/>

            </LinearLayout>

    </LinearLayout>


</LinearLayout>