<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/esfera"
                    android:contentDescription="@string/esfera_de_dragón"
                    >

                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Asunto"
                                android:textSize="20sp">

                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Contenido"
                                android:textSize="20sp">

                            </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha"
                        android:textSize="20sp"
                        android:textAlignment="textEnd">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Estrellita"
                        android:textSize="20sp"
                        android:textAlignment="textEnd">

                    </TextView>

                </LinearLayout>

    </LinearLayout>

</LinearLayout>
