<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/Nombre"
        android:inputType="text"
        android:autofillHints="name"
        >

    </EditText>

    <EditText
        android:id="@+id/editTextTextTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:autofillHints="password"
        >

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextTextTwo"
        android:text="@string/loggin">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>