<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="75dp"
            android:layout_height="75dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/esfera"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Asunto"

            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"

            app:layout_constraintVertical_bias="0.25"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contenido"

            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"

            app:layout_constraintVertical_bias="0.70"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fecha"

            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginEnd="20dp"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estrellita"

            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
